--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+              // "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/my-theme.scss",
               "src/styles.scss"
             ],
             "scripts": []
